--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="com.phonegap.helloworld" version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+<widget id="com.phonegap.phonegapspotify" version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
     <feature name="Whitelist">
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
@@ -35,12 +35,12 @@
     <splash density="port-ldpi" src="res/screen/android/drawable-port-ldpi/screen.png" />
     <splash density="port-mdpi" src="res/screen/android/drawable-port-mdpi/screen.png" />
     <splash density="port-xhdpi" src="res/screen/android/drawable-port-xhdpi/screen.png" />
-    <name>helloworld</name>
+    <name>PhoneGap Spotify - Short Task</name>
     <description>
-        A basic Framework7 Media App for PhoneGap.
+        A basic Framework7 Media App for PhoneGap using the Spotify API.
     </description>
-    <author email="tommy@devgeeks.org" href="http://phonegap.com">
-        Adobe PhoneGap Team
+    <author email="jburke9@mail.ccsf.edu">
+        Toki Burke
     </author>
     <content src="index.html" />
     <access origin="*" />
