--- a/platforms/android/assets/www/css/styles.css
+++ b/platforms/android/assets/www/css/styles.css
@@ -20,6 +20,10 @@ body {
   overflow: hidden;
 }
 
+.my-intro {
+  padding: 0 1em;
+}
+
 /*
    statusbar-overlay sets the background color for the overlay. Black text is the default when the statusbar plugin is not added. When the
    statusbar plugin is added, it also adds default setting to make the content white via:
